默认使用aes256，base64加解密更换使用common-codec包以解决jdk1.9以后不可用的问题